<resources>
    <string name="app_name">My Rose Carillon</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_file_uploader">Welcome to File Uploader</string>
    <string name="welcome_to_main_menu">Welcome to Main Menu</string>
    <string name="welcome_to_my_songs">Welcome to My Songs</string>
    <string name="welcome_to_profile_page">Welcome to Profile Page</string>
    <string name="welcome_to_song_board">Welcome to Song Board</string>
    <string name="welcome_to_song_composer">Welcome to Song Composer</string>
    <string name="welcome_to_log_in">Welcome to Log In</string>
    <string name="song_title">Song Title</string>
    <string name="file_name">File Name:</string>
    <string name="length">Length:</string>
    <string name="notes">Notes:</string>
    <string name="compose">Compose</string>
    <string name="upload">Upload</string>
    <string name="notes_title">Notes</string>
    <string name="rests_title">Rests</string>
    <string name="bpm_title">BPM</string>
    <string name="temp_score">999</string>
    <string name="now_playing_title">NOW PLAYING</string>
    <string name="up_next">UP NEXT</string>
    <string name="view_all">View All</string>
    <string name="create_title">CREATE</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="upvotes_given_var">Upvotes Given: %d</string>
    <string name="upvotes_given">Upvotes Given: </string>
    <string name="songs_uploaded_var">Songs Uploaded: %d</string>
    <string name="songs_uploaded">Songs Uploaded: </string>
    <string name="songs_played_var">Songs Played: %d</string>
    <string name="songs_played">Songs Played: </string>
    <string name="carills_var">Carills: %d</string>
    <string name="carills">Carills: </string>
    <string name="user_settings">User Settings</string>
    <string name="my_songs">My Songs</string>
    <string name="placeholder_name">Placeholder Name</string>
    <string name="profile">Profile</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="edit_display_name">Display Name:</string>
    <string name="enter_display_name">Enter Display Name</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="add_post">Add Post</string>
    <string name="choose_song">Choose a Song</string>

</resources>