<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongComposerFragment">

    <TextView
        android:id="@+id/song_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFeatureSettings="smcp"
        android:textSize="24sp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/song_title" />

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/composer_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:layout_below="@id/song_title_view"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/notes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes_title"
        android:padding="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@id/composer_view"/>

    <LinearLayout
        android:id="@+id/note_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@drawable/empty_divider"
        android:layout_below="@id/notes_title">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDetail" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDetail" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDetail" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDetail" />
    </LinearLayout>

    <TextView
        android:id="@+id/rests_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_buttons"
        android:padding="10dp"
        android:text="@string/rests_title"
        android:textStyle="bold"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/rest_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:divider="@drawable/empty_divider"
        android:layout_below="@id/rests_title">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDetail" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDetail" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDetail" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDetail" />
    </LinearLayout>

    <Button
        android:id="@+id/compose_button"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/compose"
        android:textSize="12sp"
        android:textColor="@color/colorBackground"/>

</RelativeLayout>